--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
         "babel-cli": "^6.23.0",
         "babel-core": "^6.23.1",
         "babel-preset-es2015": "^6.22.0"
-    }
+    },
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=build webpack"
 }
