--- a/package.json
+++ b/package.json
@@ -8,19 +8,32 @@
     "scripts": {
         "api": "babel-node server.js"
     },
+    "start": "NODE_ENV=development webpack-dev-server",
+    "build": "NODE_ENV=build webpack",
     "dependencies": {
         "body-parser": "^1.16.1",
         "eslint": "^3.16.0",
         "express": "^4.14.1",
         "jshint": "^2.9.4",
         "mongoose": "^4.8.4",
-        "morgan": "^1.8.1"
+        "morgan": "^1.8.1",
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2",
+        "react-router": "^3.0.2"
     },
     "devDependencies": {
         "babel-cli": "^6.23.0",
         "babel-core": "^6.23.1",
-        "babel-preset-es2015": "^6.22.0"
-    },
-    "start": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=build webpack"
+        "babel-loader": "^6.3.2",
+        "babel-preset-es2015": "^6.22.0",
+        "babel-preset-react": "^6.23.0",
+        "css-loader": "^0.26.2",
+        "file-loader": "^0.10.1",
+        "react-hot-loader": "3.0.0-beta.6",
+        "style-loader": "^0.13.2",
+        "webpack": "^2.2.1",
+        "webpack-dev-server": "^2.4.1",
+        "webpack-merge": "^3.0.0",
+        "webpack-validator": "^2.3.0"
+    }
 }
